--- a/cart.html
+++ b/cart.html
@@ -1,13 +1,13 @@
-<html lang="en">
+<html>
 <link rel="stylesheet" type="text/css" href="index.css">
-<title>Product of FISH</title>
 <head>
+	<title>View Cart</title>
 	<div id="logoandmotto">
 		<div id="logo">
 			<img src="./images/fesh.png">
 		</div>
 		<div id="motto">
-			<h1>This is Product of FISH</h1>
+			<h1>This is Cart of FISH</h1>
 			F I S H
 		</div>
 	</div>
@@ -20,16 +20,15 @@
 	<nav id="navbar">
 		<ul>
 			<li><a href="index.html">Home</a></li>
-			<li><a class="current-page" href="purchase.html">Purchase</a>
+			<li><a href="purchase.html">Purchase</a>
 				<ul>
 					<li><a href="">Fish</a></li>
 					<li><a href="">Food</a></li>
-					<li><a href="">Tanks</a></li>
-					<li><a href="">Decorations</a></li>
+					<li><a href="">Homes</a></li>
+					<li><a href="">Accessories</a></li>
 				</ul>
 			</li>
-			<li><a href="cart.html">Cart</a></li>
+			<li><a class="current-page" href="cart.html">Cart</a></li>
 		</ul>
 	</nav>
 </body>
-</html>
