--- a/purchase.html
+++ b/purchase.html
@@ -29,7 +29,7 @@
 					<li><a href="">Accessories</a></li>
 				</ul>
 			</li>
-			<li><a href="contactus.html">Contact Us</a></li>
+			<li><a href="cart.html">Cart</a></li>
 		</ul>
 	</nav>
 	<h2>Please choose from our four categories of products, or select from all items.</h2>
