--- a/index.html
+++ b/index.html
@@ -1,8 +1,12 @@
 <!DOCTYPE html>
 <html lang="en">
-<link rel="stylesheet" type="text/css" href="index.css">
-<title>Store of FISH</title>
+
+
 <head>
+	<link rel="stylesheet" type="text/css" href="index.css">
+	<title>Store of FISH</title>	
+</head>
+<body>
 	<div id="logoandmotto">
 		<div id="logo">
 			<img src="./images/fesh.png">
@@ -16,12 +20,11 @@
 		<a href="signup.html">sign up</a>
 		<a href="login.html">login</a>
 	</div>
-</head>
-<body>
+	
 	<nav id="navbar">
 		<ul>
 			<li><a class="current-page" href="index.html">Home</a></li>
-			<li><a href="purchase.html">Purchase</a>
+			<li><a href="purchase.php">Purchase</a>
 				<ul>
 					<li><a href="">Fish</a></li>
 					<li><a href="">Food</a></li>
@@ -29,7 +32,7 @@
 					<li><a href="">Decorations</a></li>
 				</ul>
 			</li>
-			<li><a id="cart" href="cart.html">Cart</a></li>
+			<li><a id="cart" href="cart.php">Cart</a></li>
 		</ul>
 	</nav>
 	Hello
