descriptions-and-links
-added product descriptions to the product page
-more styling

--- a/index.html
+++ b/index.html
@@ -26,22 +26,25 @@
 			<li><a class="current-page" href="index.html">Home</a></li>
 			<li><a href="purchase.php">Purchase</a>
 				<ul>
-					<li><a href="">Fish</a></li>
-					<li><a href="">Food</a></li>
-					<li><a href="">Tanks</a></li>
-					<li><a href="">Decorations</a></li>
+					<li><a href="fish.php">Fish</a></li>
+					<li><a href="food.php">Food</a></li>
+					<li><a href="homes.php">Homes</a></li>
+					<li><a href="accessories.php">Accessories</a></li>
 				</ul>
 			</li>
-			<li><a id="cart" href="cart.php">Cart</a></li>
+			<li><a id="cart" href="checkout.php">Cart</a></li>
 		</ul>
 	</nav>
-	Hello
-	<p>
+	<div id="welcome">
+		Hello
+	</div>
+	<p id="aboutus">
 		Fish store
 	</p>
-	<h1>FISH OF THE DAY</h1>
 	<div id="fotd">
-		"Catfish"
+		<h1>FISH OF THE DAY/YEAR</h1>
+		<h2>"Catfish"</h2><br>
+		<h3>-Do not get catfished</h3>
 	</div>
 	????
 </body>
