--- a/index.html
+++ b/index.html
@@ -39,10 +39,11 @@
 		Hello
 	</div>
 	<p id="aboutus">
-		Fish store
+		Fish store specializes in fish and fish accessories. Whether it's for fish, from fish, or just fish, we got you covered.
 	</p>
 	<div id="fotd">
 		<h1>FISH OF THE DAY/YEAR</h1>
+		<img src="https://upload.wikimedia.org/wikipedia/commons/2/2c/Catfish_%28PSF%29.svg">
 		<h2>"Catfish"</h2><br>
 		<h3>-Do not get catfished</h3>
 	</div>
