--- a/index.html
+++ b/index.html
@@ -35,6 +35,7 @@
 			<li><a id="cart" href="checkout.php">Cart</a></li>
 		</ul>
 	</nav>
+	<div id="content">
 	<div id="welcome">
 		Hello
 	</div>
@@ -48,5 +49,6 @@
 		<h3>-Do not get catfished</h3>
 	</div>
 	????
+	</div>
 </body>
 </html>
