--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
 	
 	<nav id="navbar">
 		<ul>
-			<li><a class="current-page" href="index.html">Home</a></li>
+			<li><a class="current-page" href="index.php">Home</a></li>
 			<li><a href="purchase.php">Purchase</a>
 				<ul>
 					<li><a href="fish.php">Fish</a></li>
